2022-11-09  Bart Schaefer  <schaefer@zsh.org>

	* 50929: Src/exec.c: fix handling of ERR_RETURN bent by 50928.

	* 50928: News, Src/exec.c, Test/C03traps.ztst: fix tests for 50897,
	mention behavior change in NEWS

	* 50922: Src/exec.c, Src/jobs.c: fix additional cases of signals
	for current shell jobs on the right of a pipeline.  Backs out
	part of 50874.

2022-11-08  Bart Schaefer  <schaefer@zsh.org>

	* 50897: Src/exec.c, Src/loop.c: nonzero status of complex
	commands should trigger ERR_EXIT

2022-11-08  Peter Stephenson  <p.stephenson@samsung.com>

	* users/28338: Src/lex.c, Test/D08cmdsubst.ztst: edge case of an
	edge case in command expansion of alias.

2022-11-06  Bart Schaefer  <schaefer@zsh.org>

	* 50874: Src/jobs.c: fix handling of tty signals for jobs in
	the current shell when waiting for the right side of a pipeline.

2022-11-02  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 50851: Doc/Zsh/options.yo, Src/exec.c, Src/options.c: restore
	state (such as typtab) when returning from a function with
	localoptions (but do not take care of EMACS/VI options).

2022-10-31  Bart Schaefer  <schaefer@zsh.org>

	* 50855: Doc/Zsh/builtins.yo, Doc/Zsh/params.yo: Clarify how
	commands are hashed, and searched-for by "whence".

2022-10-31  Peter Grayson  <pete@jpgrayson.net>

	* 50844: Completion/Unix/Command/_stgit: Remove _stgit completion
	script

2022-10-25  Axel Beckert  <abe@deuxchevaux.org.org>

	* 50840: Doc/Zsh/grammar.yo: Correct NO_MATCH to NOMATCH.

2022-10-23  Bart Schaefer  <schaefer@zsh.org>

	* users/28243: Doc/Zsh/builtins.yo: update "typeset +" doc

2022-10-22  Bart Schaefer  <schaefer@zsh.org>

	* 50714: Completion/Unix/Command/_git (_git-diff): also complete
	in the 2nd argument position anything that could be in the 1st.

2022-10-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 50786: Functions/Misc/add-zle-hook-widget: make match
	etc. local when used in styles.

2022-10-17  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>
